--- a/mhworld/Builder/Builder.storyboard
+++ b/mhworld/Builder/Builder.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -94,7 +93,6 @@
                                             <rect key="frame" x="16" y="11" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="30" id="M8l-M1-c42"/>
-                                                <constraint firstAttribute="width" secondItem="aLH-na-tds" secondAttribute="height" multiplier="1:1" id="qcS-Ax-1De"/>
                                             </constraints>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_body" translatesAutoresizingMaskIntoConstraints="NO" id="ZIE-kZ-uWe">
@@ -141,40 +139,40 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="ZIE-kZ-uWe" firstAttribute="width" secondItem="aLH-na-tds" secondAttribute="width" id="0Y8-3W-LOF"/>
-                                        <constraint firstItem="i8l-bY-JTN" firstAttribute="width" secondItem="ZIE-kZ-uWe" secondAttribute="width" id="0rR-M0-fTD"/>
                                         <constraint firstItem="jAw-XH-xqP" firstAttribute="leading" secondItem="uQA-XA-Wzw" secondAttribute="leading" id="2Fb-L9-taE"/>
                                         <constraint firstAttribute="trailing" secondItem="uQA-XA-Wzw" secondAttribute="trailing" constant="16" id="B4b-qd-jHv"/>
                                         <constraint firstItem="DAb-Ey-Pmv" firstAttribute="leading" secondItem="jAw-XH-xqP" secondAttribute="leading" id="BEZ-HF-dff"/>
-                                        <constraint firstItem="eTN-HT-7nm" firstAttribute="centerX" secondItem="FcL-Fc-QOO" secondAttribute="centerX" id="CTW-WP-2L6"/>
-                                        <constraint firstItem="FcL-Fc-QOO" firstAttribute="centerX" secondItem="i8l-bY-JTN" secondAttribute="centerX" id="DA1-h0-gq3"/>
+                                        <constraint firstItem="dMw-bq-khn" firstAttribute="leading" secondItem="eTN-HT-7nm" secondAttribute="trailing" constant="8" id="Dwz-gx-vHE"/>
                                         <constraint firstItem="uQA-XA-Wzw" firstAttribute="centerY" secondItem="aLH-na-tds" secondAttribute="centerY" id="EPm-K3-sqy"/>
-                                        <constraint firstItem="FcL-Fc-QOO" firstAttribute="width" secondItem="i8l-bY-JTN" secondAttribute="width" id="FYs-On-sxc"/>
                                         <constraint firstItem="eTN-HT-7nm" firstAttribute="top" secondItem="FcL-Fc-QOO" secondAttribute="bottom" constant="12" id="GOO-a1-kaa"/>
                                         <constraint firstItem="dMw-bq-khn" firstAttribute="trailing" secondItem="pfG-2A-uoS" secondAttribute="trailing" id="HR7-bS-Ixv"/>
                                         <constraint firstItem="DAb-Ey-Pmv" firstAttribute="trailing" secondItem="jAw-XH-xqP" secondAttribute="trailing" id="HhM-ZR-Ynv"/>
                                         <constraint firstItem="uQA-XA-Wzw" firstAttribute="leading" secondItem="aLH-na-tds" secondAttribute="trailing" constant="8" id="IB8-PG-UqE"/>
                                         <constraint firstItem="i8l-bY-JTN" firstAttribute="top" secondItem="ZIE-kZ-uWe" secondAttribute="bottom" constant="10" id="Jbk-or-ijI"/>
-                                        <constraint firstItem="i8l-bY-JTN" firstAttribute="centerX" secondItem="ZIE-kZ-uWe" secondAttribute="centerX" id="Jgz-O6-eMO"/>
+                                        <constraint firstItem="ZIE-kZ-uWe" firstAttribute="height" secondItem="aLH-na-tds" secondAttribute="height" id="KjA-BX-IQ3"/>
+                                        <constraint firstItem="DAb-Ey-Pmv" firstAttribute="leading" secondItem="i8l-bY-JTN" secondAttribute="trailing" constant="8" id="MsR-GD-G1G"/>
                                         <constraint firstItem="ZIE-kZ-uWe" firstAttribute="top" secondItem="aLH-na-tds" secondAttribute="bottom" constant="10" id="OTw-Jd-0SV"/>
                                         <constraint firstItem="dMw-bq-khn" firstAttribute="leading" secondItem="pfG-2A-uoS" secondAttribute="leading" id="PvG-zI-wP0"/>
                                         <constraint firstItem="jAw-XH-xqP" firstAttribute="trailing" secondItem="uQA-XA-Wzw" secondAttribute="trailing" id="QfO-QL-n2a"/>
+                                        <constraint firstItem="FcL-Fc-QOO" firstAttribute="height" secondItem="i8l-bY-JTN" secondAttribute="height" id="Rc2-eD-Zew"/>
+                                        <constraint firstItem="i8l-bY-JTN" firstAttribute="height" secondItem="ZIE-kZ-uWe" secondAttribute="height" id="SGu-kg-72y"/>
                                         <constraint firstAttribute="bottom" secondItem="eTN-HT-7nm" secondAttribute="bottom" constant="12.5" id="bz8-Hv-gKm"/>
-                                        <constraint firstItem="eTN-HT-7nm" firstAttribute="width" secondItem="FcL-Fc-QOO" secondAttribute="width" id="co4-YJ-RIy"/>
                                         <constraint firstItem="aLH-na-tds" firstAttribute="leading" secondItem="Db1-wb-tAM" secondAttribute="leading" constant="16" id="d6h-NW-ng5"/>
                                         <constraint firstItem="DAb-Ey-Pmv" firstAttribute="centerY" secondItem="i8l-bY-JTN" secondAttribute="centerY" id="e4J-Va-gZU"/>
-                                        <constraint firstItem="ZIE-kZ-uWe" firstAttribute="height" secondItem="aLH-na-tds" secondAttribute="height" id="eHW-uQ-vQT"/>
+                                        <constraint firstItem="FcL-Fc-QOO" firstAttribute="leading" secondItem="Db1-wb-tAM" secondAttribute="leading" constant="16" id="ePS-58-Tli"/>
                                         <constraint firstItem="aLH-na-tds" firstAttribute="top" secondItem="Db1-wb-tAM" secondAttribute="top" constant="11" id="fve-QB-EQM"/>
-                                        <constraint firstItem="FcL-Fc-QOO" firstAttribute="height" secondItem="i8l-bY-JTN" secondAttribute="height" id="gih-ze-aXZ"/>
-                                        <constraint firstItem="i8l-bY-JTN" firstAttribute="height" secondItem="ZIE-kZ-uWe" secondAttribute="height" id="goQ-le-gSO"/>
+                                        <constraint firstItem="eTN-HT-7nm" firstAttribute="height" secondItem="FcL-Fc-QOO" secondAttribute="height" id="j89-aS-NLk"/>
                                         <constraint firstItem="jAw-XH-xqP" firstAttribute="centerY" secondItem="ZIE-kZ-uWe" secondAttribute="centerY" id="jXD-gk-4Ye"/>
                                         <constraint firstItem="FcL-Fc-QOO" firstAttribute="top" secondItem="i8l-bY-JTN" secondAttribute="bottom" constant="10" id="jZ4-4Q-IRP"/>
                                         <constraint firstItem="pfG-2A-uoS" firstAttribute="leading" secondItem="DAb-Ey-Pmv" secondAttribute="leading" id="kMg-SZ-CCQ"/>
-                                        <constraint firstItem="eTN-HT-7nm" firstAttribute="height" secondItem="FcL-Fc-QOO" secondAttribute="height" id="la3-3f-AEM"/>
+                                        <constraint firstItem="ZIE-kZ-uWe" firstAttribute="leading" secondItem="Db1-wb-tAM" secondAttribute="leading" constant="16" id="kbs-v9-xj5"/>
+                                        <constraint firstItem="eTN-HT-7nm" firstAttribute="leading" secondItem="Db1-wb-tAM" secondAttribute="leading" constant="16" id="lxO-DT-M7N"/>
                                         <constraint firstItem="pfG-2A-uoS" firstAttribute="trailing" secondItem="DAb-Ey-Pmv" secondAttribute="trailing" id="piW-Xh-DWR"/>
-                                        <constraint firstItem="ZIE-kZ-uWe" firstAttribute="centerX" secondItem="aLH-na-tds" secondAttribute="centerX" id="qzB-Bo-hMI"/>
                                         <constraint firstItem="pfG-2A-uoS" firstAttribute="centerY" secondItem="FcL-Fc-QOO" secondAttribute="centerY" id="smm-JB-FZv"/>
                                         <constraint firstItem="dMw-bq-khn" firstAttribute="centerY" secondItem="eTN-HT-7nm" secondAttribute="centerY" id="tiq-hr-pxy"/>
+                                        <constraint firstItem="jAw-XH-xqP" firstAttribute="leading" secondItem="ZIE-kZ-uWe" secondAttribute="trailing" constant="8" id="vG4-Ck-Kvf"/>
+                                        <constraint firstItem="i8l-bY-JTN" firstAttribute="leading" secondItem="Db1-wb-tAM" secondAttribute="leading" constant="16" id="x0I-1Q-OBQ"/>
+                                        <constraint firstItem="pfG-2A-uoS" firstAttribute="leading" secondItem="FcL-Fc-QOO" secondAttribute="trailing" constant="8" id="yEo-6y-3hx"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
